change  command line 4 : 'un' ---> ''before

--- a/homework/Day_004_HW.ipynb
+++ b/homework/Day_004_HW.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 1,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 2,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -71,14 +71,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Un one encoding:\n",
+      "before one encoding:\n",
       "(307511, 1)\n",
       "  WEEKDAY_APPR_PROCESS_START\n",
       "0                  WEDNESDAY\n",
@@ -125,7 +125,7 @@
     "\"\"\"\n",
     "#sub_train.shape\n",
     "#sub_train.head().dtypes.value_counts()\n",
-    "print('Un one encoding:')\n",
+    "print('before one encoding:')\n",
     "print(sub_train.shape)\n",
     "print(sub_train.head())\n",
     "print('==============')\n",
