change  command line 4 : 'un' ---> 'before'

--- a/homework/Day_004_HW.ipynb
+++ b/homework/Day_004_HW.ipynb
@@ -125,12 +125,12 @@
     "\"\"\"\n",
     "#sub_train.shape\n",
     "#sub_train.head().dtypes.value_counts()\n",
-    "print('before one encoding:')\n",
+    "print('before One Hot encoding:')\n",
     "print(sub_train.shape)\n",
     "print(sub_train.head())\n",
     "print('==============')\n",
     "new_sub_train = pd.get_dummies(sub_train)\n",
-    "print('After one encoding:')\n",
+    "print('After One Hot encoding:')\n",
     "print(new_sub_train.shape)\n",
     "print(new_sub_train.head())"
    ]
